Fixed Task and Issue name display when above a certain length, now the lines wrap nicely and evenly.

--- a/app/assets/stylesheets/pages/project_show.css
+++ b/app/assets/stylesheets/pages/project_show.css
@@ -31,7 +31,8 @@
   }
 
   .project-child-list-item > span {
-    @apply max-w-xs flex-grow;
+    @apply flex-grow;
+    width: 50%;
   }
 
   .project-child-list-item > span[data-status="complete"] {
